force-app/main/default/objects/Historico_do_produto__c/Historico_do_produto__c.object-meta.xml
<CustomObject>
    <label>Atualização do Produto</label>
    <nameField>
        <label>Nome de Histórico do p</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Atualizações do Produto</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>