force-app/main/default/objects/Historico_do_produto__c/fields/Aguardando_recebimento__c.field-meta.xml
<CustomField>
    <fullName>Aguardando_recebimento__c</fullName>
    <label>Aguardando recebimento (novo)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>