force-app/main/default/objects/Historico_do_produto__c/fields/Aprovacao__c.field-meta.xml
<CustomField>
    <fullName>Aprovacao__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aprovação</label>
    <type>Checkbox</type>
</CustomField>