force-app/main/default/objects/Historico_do_produto__c/fields/Ativo_no_commerce__c.field-meta.xml
<CustomField>
    <fullName>Ativo_no_commerce__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ativo no commerce</label>
    <type>Checkbox</type>
</CustomField>