force-app/main/default/objects/Historico_do_produto__c/fields/Cod_SalesForce__c.field-meta.xml
<CustomField>
    <fullName>Cod_SalesForce__c</fullName>
    <displayFormat>HP-{0000}</displayFormat>
    <externalId>true</externalId>
    <label>Cod. SalesForce</label>
    <type>AutoNumber</type>
</CustomField>