force-app/main/default/objects/Historico_do_produto__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Descrição</label>
    <length>3990</length>
    <type>LongTextArea</type>
</CustomField>