force-app/main/default/objects/Historico_do_produto__c/fields/Estoque_disponivel__c.field-meta.xml
<CustomField>
    <fullName>Estoque_disponivel__c</fullName>
    <label>Estoque disponível</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>