force-app/main/default/objects/Historico_do_produto__c/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <label>ID externo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>