force-app/main/default/objects/Historico_do_produto__c/fields/Fonte_do_Produto__c.field-meta.xml
<CustomField>
    <fullName>Fonte_do_Produto__c</fullName>
    <label>Fonte do Produto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internacional</fullName>
            </value>
            <value>
                <fullName>Nacional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>