force-app/main/default/objects/Historico_do_produto__c/fields/Fornecedor__c.field-meta.xml
<CustomField>
    <fullName>Fornecedor__c</fullName>
    <label>Fornecedor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>