force-app/main/default/objects/Historico_do_produto__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ativo</label>
    <type>Checkbox</type>
</CustomField>