force-app/main/default/objects/Historico_do_produto__c/fields/Marca__c.field-meta.xml
<CustomField>
    <fullName>Marca__c</fullName>
    <label>Marca</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>7LIVES</fullName>
            </value>
            <value>
                <fullName>ABC</fullName>
            </value>
            <value>
                <fullName>ACCUMED</fullName>
            </value>
            <value>
                <fullName>ACTE</fullName>
            </value>
            <value>
                <fullName>AEROGEN</fullName>
            </value>
            <value>
                <fullName>AGATA</fullName>
            </value>
            <value>
                <fullName>AIR LIQUIDE</fullName>
            </value>
            <value>
                <fullName>AIR SHIELD</fullName>
            </value>
            <value>
                <fullName>ALBAN</fullName>
            </value>
            <value>
                <fullName>ALIVE HEART</fullName>
            </value>
            <value>
                <fullName>ALLIAGE</fullName>
            </value>
            <value>
                <fullName>ALVIMÉDICA</fullName>
            </value>
            <value>
                <fullName>ANALYSER</fullName>
            </value>
            <value>
                <fullName>ANESTHESIA</fullName>
            </value>
            <value>
                <fullName>AOC</fullName>
            </value>
            <value>
                <fullName>APK</fullName>
            </value>
            <value>
                <fullName>APPLE</fullName>
            </value>
            <value>
                <fullName>ARJO</fullName>
            </value>
            <value>
                <fullName>ARJOHUNTLEIGH</fullName>
            </value>
            <value>
                <fullName>ARKTUS</fullName>
            </value>
            <value>
                <fullName>Arroyo</fullName>
            </value>
            <value>
                <fullName>ARTROCORP</fullName>
            </value>
            <value>
                <fullName>ASSUT EUROPE</fullName>
            </value>
            <value>
                <fullName>ATHOS</fullName>
            </value>
            <value>
                <fullName>ATRAMAT</fullName>
            </value>
            <value>
                <fullName>AWAREWESS</fullName>
            </value>
            <value>
                <fullName>AXMED</fullName>
            </value>
            <value>
                <fullName>BALT</fullName>
            </value>
            <value>
                <fullName>BAUMER</fullName>
            </value>
            <value>
                <fullName>BEACON</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>