force-app/main/default/objects/Historico_do_produto__c/fields/Num_Anvisa__c.field-meta.xml
<CustomField>
    <fullName>Num_Anvisa__c</fullName>
    <label>Num. Anvisa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>