force-app/main/default/objects/Historico_do_produto__c/fields/ProductCode__c.field-meta.xml
<CustomField>
    <fullName>ProductCode__c</fullName>
    <label>Cod. fabricante</label>
    <length>255</length>
    <type>Text</type>
</CustomField>