force-app/main/default/objects/Historico_do_produto__c/fields/Produto__c.field-meta.xml
<CustomField>
    <fullName>Produto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Historicos_do_Produto</relationshipName>
    <type>Lookup</type>
</CustomField>