force-app/main/default/objects/Historico_do_produto__c/fields/Produto_Atualizado__c.field-meta.xml
<CustomField>
    <fullName>Produto_Atualizado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produto Atualizado</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Hist_ricos_do_Produto</relationshipName>
    <type>Lookup</type>
</CustomField>