force-app/main/default/objects/Historico_do_produto__c/fields/Responsavel_pela_Atualiza_o__c.field-meta.xml
<CustomField>
    <fullName>Responsavel_pela_Atualiza_o__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsável pela Atualização</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Hist_ricos_do_Produto</relationshipName>
    <type>Lookup</type>
</CustomField>