force-app/main/default/objects/Historico_do_produto__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EM APROVAÇÃO</fullName>
            </value>
            <value>
                <fullName>APROVADO</fullName>
            </value>
            <value>
                <fullName>REPROVADO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>