force-app/main/default/objects/Historico_do_produto__c/fields/Status_Commerce__c.field-meta.xml
<CustomField>
    <fullName>Status_Commerce__c</fullName>
    <formula>IF(Ativo_no_commerce__c == true, &quot;publish&quot;, &quot;draft&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Commerce</label>
    <type>Text</type>
</CustomField>