force-app/main/default/objects/Historico_do_produto__c/fields/StockKeepingUnit__c.field-meta.xml
<CustomField>
    <fullName>StockKeepingUnit__c</fullName>
    <label>Cod. Hospcom</label>
    <length>180</length>
    <type>Text</type>
</CustomField>