force-app/main/default/objects/Historico_do_produto__c/fields/Tipo_do_Produto__c.field-meta.xml
<CustomField>
    <fullName>Tipo_do_Produto__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACESSÓRIO</fullName>
            </value>
            <value>
                <fullName>CONSUMÍVEL</fullName>
            </value>
            <value>
                <fullName>EQUIPAMENTO</fullName>
            </value>
            <value>
                <fullName>FERRAMENTA</fullName>
            </value>
            <value>
                <fullName>IMPLANTE</fullName>
            </value>
            <value>
                <fullName>INSTRUMENTAL</fullName>
            </value>
            <value>
                <fullName>INSUMO</fullName>
            </value>
            <value>
                <fullName>KIT SERVIÇO</fullName>
            </value>
            <value>
                <fullName>MÓDULO</fullName>
            </value>
            <value>
                <fullName>MOVEIS</fullName>
            </value>
            <value>
                <fullName>OPCIONAL</fullName>
            </value>
            <value>
                <fullName>PEÇA</fullName>
            </value>
            <value>
                <fullName>SERVIÇO</fullName>
            </value>
            <value>
                <fullName>SET CIRURGICO</fullName>
            </value>
            <value>
                <fullName>SOFTWARE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>