force-app/main/default/objects/Historico_do_produto__c/fields/Unidade_de_medida__c.field-meta.xml
<CustomField>
    <fullName>Unidade_de_medida__c</fullName>
    <label>Unidade de medida</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>