force-app/main/default/objects/Historico_do_produto__c/fields/Valor_dos_Acessorios__c.field-meta.xml
<CustomField>
    <fullName>Valor_dos_Acessorios__c</fullName>
    <label>Valor dos Acessórios</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>