force-app/main/default/objects/Historico_do_produto__c/listViews/Aguardando_aprova_o.listView-meta.xml
<ListView>
    <fullName>Aguardando_aprova_o</fullName>
    <columns>NAME</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Produto__c</columns>
    <columns>Linha__c</columns>
    <columns>Modelo__c</columns>
    <columns>Marca__c</columns>
    <columns>Valor_de_Venda__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>EM APROVAÇÃO</value>
    </filters>
    <label>Aguardando aprovação</label>
</ListView>