force-app/main/default/objects/Historico_do_produto__c/listViews/C_pia_de_Aprovados.listView-meta.xml
<ListView>
    <fullName>C_pia_de_Aprovados</fullName>
    <columns>NAME</columns>
    <columns>Produto__c</columns>
    <columns>Linha__c</columns>
    <columns>Modelo__c</columns>
    <columns>Marca__c</columns>
    <columns>Valor_de_Venda__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>REPROVADO</value>
    </filters>
    <label>Reprovados</label>
</ListView>